# mamo-endpoint

./: Makefile  README.md  pyproject.toml  requirements.txt
server/control/: models.py
server/control/management/commands/: install.py
server/control/migrations/: 0001_initial.py
server/server/: settings.py
